--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@ footer p {
  
 </style>
 
-<p>lorem30</p>
+
 
 </head>
 <body>
@@ -125,7 +125,7 @@ footer p {
 
 
 <footer>
-  <p>Copyright © Rohit Raman</p>
+  <p>Copyright Â© Rohit Raman</p>
 </footer>
 
 
