--- a/index.html
+++ b/index.html
@@ -125,7 +125,8 @@ footer p {
 
 
 <footer>
-  <p>Copyright © Rohit Raman</p>
+  <p>Copyright © Nitesh Kumar</p>
+	<p>Deploy by: Rohit Raman</p>
 </footer>
 
 
